Fixed overflow box on small screens, and problems when minifying with font-style

--- a/sass/_mailchimp.sass
+++ b/sass/_mailchimp.sass
@@ -12,13 +12,14 @@
     display: block
     padding: 1rem
     margin: 4.5% auto 0 auto
+    box-sizing: border-box
     width: 100%
     text-align: center
     background: $lightAccent
     transition: border-color 0.5s ease
     border: .5rem solid $lightAccent
-    font: normal 800 3rem / 3.5rem $fontHeader
-    box-sizing:border-box
+    font-style: normal
+    font: 800 3rem / 3.5rem $fontHeader
     &:focus
       outline: none
       border-color: $darkAccent
@@ -33,7 +34,8 @@
     border: .5rem solid $lightAccent
     margin: 4.5% auto 0 auto
     letter-spacing: .03em
-    font: normal 800 3rem / 3.5rem $fontHeader
+    font-style: normal
+    font: 800 3rem / 3.5rem $fontHeader
     font-variant: small-caps
     text-transform: uppercase
     text-align: center
@@ -44,3 +46,6 @@
       border-color: $darkAccent
       color: $darkAccent
       transition: all 0.3s ease
+    &:active
+      background: darken($lightAccent, 10%)
+      background: rgba($lightAccent, 0.5)
